Spacing fixes for single layout

--- a/public_html/assets/src/css/issues/layout.css
+++ b/public_html/assets/src/css/issues/layout.css
@@ -1,6 +1,12 @@
 #content {
 	text-align: center;
+	padding-left: 0;
+	padding-right: 0;
+	padding-bottom: 0;
 }
 #content h1 {
 	margin-top: 0;
+}
+#content img {
+	display: block;
 }
