--- a/public_html/assets/src/css/main.css
+++ b/public_html/assets/src/css/main.css
@@ -26,7 +26,7 @@ body {
 #content {
 	position: relative;
 	padding: 20px 10px;
-	min-height:100vh;
+	min-height: calc(100vh - 159px);
 }
 .white {
 	color:white;
